# plantilla_tp3_algo2

./: .gitignore  CMakeLists.txt  README.md
db/: equipos.txt
include/: Test.h
src/: Test.cpp  main.cpp
